# ocel-generator

./: LICENSE  README.md  manifest.json  normative_model.json  output.jsonocel  pyproject.toml
examples/: basic_generation.py  conformance_demo.py
src/ocelgen/: __init__.py  cli.py
src/ocelgen/deviations/: __init__.py  injector.py  registry.py  strategies.py  types.py
src/ocelgen/export/: __init__.py  manifest.py  normative.py  ocel_json.py
src/ocelgen/generation/: __init__.py  attributes.py  engine.py  run_simulator.py  timestamp.py
src/ocelgen/models/: __init__.py  langchain.py  ocel.py  workflow.py
src/ocelgen/patterns/: __init__.py  base.py  parallel.py  sequential.py  supervisor.py
src/ocelgen/validation/: __init__.py  schema.py
tests/: test_deviations.py  test_integration.py  test_ocel_models.py  test_patterns.py  test_sequential.py
