[project]
name = "ocelgen"
version = "0.1.0"
description = "Mock OCEL 2.0 event log generator for LangChain multi-agent runs"
readme = "README.md"
authors = [
    { name = "Julien Simon", email = "julien@arcee.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.0",
    "jsonschema>=4.21",
    "faker>=24.0",
]

[project.optional-dependencies]
conformance = ["pm4py>=2.7"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
ocelgen = "ocelgen.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# OCEL 2.0 schema requires camelCase field names (objectId, eventTypes, etc.)
"src/ocelgen/models/ocel.py" = ["N815"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
